# autonomousbot

./: .gitignore  README.md  map.sh  navigate.sh
esp32_firmware/arduino_motor_base/: arduino_motor_base.ino
esp32_firmware/esp32_motor_encoder/: esp32_motor_encoder.ino
esp32_firmware/motor_test/: motor_test.ino
src/esp32_bridge/: package.xml  setup.cfg  setup.py
src/esp32_bridge/esp32_bridge/: __init__.py  esp32_bridge_node.py
src/esp32_bridge/launch/: esp32_bridge.launch.py
src/slam_mapping/: CMakeLists.txt  package.xml
src/slam_mapping/config/: mapping.rviz  nav2_params.yaml  navigation.rviz  slam_params.yaml
src/slam_mapping/launch/: full_system.launch.py  navigation.launch.py  slam.launch.py
udev/: 99-robot-usb.rules
